[package]
name = "better-commands"
description = "A better way of running commands - get stdout and stderr together, in order with timestamps, while easily running code as it runs line-by-line"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["command", "cmd"]
repository = "https://git.askiiart.net/askiiart/better-commands-rs"

[profile.release]
opt-level = 3